add integrations, chipdip
